[package]
name = "ethryx"
version = "0.2.2"
edition = "2024"
rust-version = "1.95"
description = "Lightweight Rust reverse proxy and health-check sidecar for Ethereum EL/CL nodes."
license = "MIT"
repository = "https://github.com/DELIGHT-LABS/ethryx"
readme = "README.md"
keywords = ["ethereum", "sidecar", "proxy", "reverse-proxy", "json-rpc", "beacon-api"]
categories = ["network-programming"]

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
hyper = { version = "1.10", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2", "server-auto", "tokio"] }
hyper-tungstenite = "0.20"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "aws-lc-rs", "webpki-tokio", "tls12"] }
http = "1.4"
http-body-util = "0.1.3"
bytes = "1.11"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
metrics-util = "0.20"
rustls = { version = "0.23" }
socket2 = "0.6"




opentelemetry = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", optional = true, features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.33.0", optional = true }

[features]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.release]
publish = false                                              # binary, not a crate
allow-branch = ["main"]                                      # release only from main
tag-message = "Release v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
pre-release-hook = ["cargo", "test", "--locked"]             # gate before any state change
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased",             replace = "{{version}}",                              min = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate",            replace = "{{date}}",                                 min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->",   replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
]
